--- a/gavel-new.css
+++ b/gavel-new.css
@@ -324,6 +324,10 @@ input[type="month"] {
   -webkit-appearance: listbox;
 }
 
+input.labelauty + label.btn-primary:focus, input.labelauty + label.btn-primary:active, input.labelauty + label.btn-primary:not(:disabled):not(.disabled):active{
+  box-shadow: none;
+}
+
 textarea {
   overflow: auto;
   resize: vertical;
@@ -2736,7 +2740,7 @@ fieldset:disabled a.btn {
 .btn-light:hover {
   color: #212529;
   background-color: #c9dcf3;
-  border-color: #bed5f1;
+  border-color: #eae2ff;
 }
 
 .btn-light:focus,
@@ -2755,7 +2759,7 @@ fieldset:disabled a.btn {
 .btn-light:not(:disabled):not(.disabled).active,
 .show > .btn-light.dropdown-toggle {
   color: #212529;
-  background-color: #bed5f1;
+  background-color: #eae2ff;
   border-color: #b4ceef;
 }
 
@@ -5170,7 +5174,7 @@ div[role="navigation"] {
 .badge-light[href]:focus {
   color: #212529;
   text-decoration: none;
-  background-color: #bed5f1;
+  background-color: #eae2ff;
 }
 
 .badge-dark {
@@ -6455,7 +6459,7 @@ a.bg-light:hover,
 a.bg-light:focus,
 button.bg-light:hover,
 button.bg-light:focus {
-  background-color: #bed5f1 !important;
+  background-color: #eae2ff !important;
 }
 
 .bg-dark {
@@ -9493,7 +9497,7 @@ a.text-danger:focus {
 
 a.text-light:hover,
 a.text-light:focus {
-  color: #bed5f1 !important;
+  color: #eae2ff !important;
 }
 
 .text-dark {
@@ -9663,6 +9667,7 @@ input.labelauty + label.btn-primary {
   padding: 0.6875rem;
   border: 1px solid #eae2ff;
   border: none;
+  box-shadow: none;
 }
 
 input.labelauty + label.btn-light {
@@ -9686,6 +9691,7 @@ input.labelauty + label.btn-light:focus {
   background-color: #eae2ff;
   color: #000;
   border: none;
+  box-shadow: none;
 }
 
 input.labelauty + label.btn-primary {
@@ -9694,12 +9700,18 @@ input.labelauty + label.btn-primary {
   border: none;
 }
 
+
 input.labelauty + label.btn-primary:focus,
 input.labelauty + label.btn-primary:active,
 input.labelauty + label.btn-primary:not(:disabled):not(.disabled):active {
   background-color: #eae2ff;
   color: #000;
   border: none;
+  box-shadow: none;
+}
+
+input.labelauty,.btn-light:not(:disabled):not(.disabled):active:focus, .btn-light:not(:disabled):not(.disabled).active:focus, .show > .btn-light.dropdown-toggle:focus {
+  box-shadow: none;
 }
 
 input.labelauty + label .svg-inline--fa {
@@ -9804,6 +9816,16 @@ select {
   background-repeat: no-repeat;
   background-size: 1rem;
   width: 100%;
+ 
+}
+
+select, .form-select, .form-select:focus  {
+  border-color: #f9f6ff;
+  box-shadow: 0 0 0 0.25rem #eae2ff;
+}
+
+select,  .form-select, .form-select:active  {
+  border-color: #f9f6ff;
 }
 
 .tab-pane {
@@ -10454,6 +10476,7 @@ button.daquestionbackbutton:hover svg {
 
 input[type="checkbox"] + label {
   margin: 0;
+  margin-bottom: 0.5rem;
 }
 
 .row.da-field-container.da-field-container-note {
