--- a/gavel-new.css
+++ b/gavel-new.css
@@ -9708,12 +9708,7 @@ input.labelauty + label.btn-primary:hover {
   border: none;
 }
 
-input.labelauty + label.btn-light:focus {
-  background-color: #eae2ff;
-  color: #000;
-  border: none;
-  box-shadow: none;
-}
+
 
 input.labelauty + label.btn-primary {
   background-color: #eae2ff;
@@ -10477,7 +10472,7 @@ button.daquestionbackbutton:hover svg {
   padding: 5px 20px;
   /* border: 1px solid #7428f2; */
   border-radius: 0.25rem;
-  background: rgba(0, 123, 255, 0.15);
+  background: #f9f6ff;
   transition: all ease 0.4s;
 }
 
@@ -10629,9 +10624,8 @@ form#daemailform .form-group + .form-group {
 
 form#daemailform .btn {
   margin-left: auto;
-  background: #ddd;
-  color: #000;
-  border: 0;
+  color: #fff;
+  background-color: #7428f2;
 }
 
 form#daemailform .form-group .col-md-8,
