--- a/gavel-new.css
+++ b/gavel-new.css
@@ -10689,15 +10689,18 @@ form#dadownloadform .form-group div input[type="checkbox"] {
 
 input[type='checkbox'] {
   accent-color: #7428f2;
-  background-color: #7428f2;
-  border-radius: .25em;
   height: 15px;
   width: 15px;
-  border: 1px solid #7428f2;
+  border: 1.5px solid #767676;
+  border-radius: 0.15rem;
 }
 
 .form-check-input[type=checkbox] {
-  border-radius: 0;
+  border-radius: 0.2rem;
+}
+
+.form-check-input:focus {
+  box-shadow: none;
 }
 
 #daquestion .da-attachment-alert.da-attachment-alert-multiple,
