--- a/gavel-new.css
+++ b/gavel-new.css
@@ -25,6 +25,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
+  --gray-light: #e9ecef;
   --primary: #7428f2;
   --primary-hover: #44178f;
   --primary-light: #f9f6ff;
@@ -2005,7 +2006,7 @@ pre code {
 
 .form-control:disabled,
 .form-control[readonly] {
-  background-color: #e9ecef;
+  background-color: var(--gray-light);
   opacity: 1;
 }
 
@@ -3401,7 +3402,7 @@ input[type="button"].btn-block {
   height: 0;
   margin: 0.5rem 0;
   overflow: hidden;
-  border-top: 1px solid #e9ecef;
+  border-top: 1px solid var(--gray-light);
 }
 
 .dropdown-item {
@@ -3700,7 +3701,7 @@ input[type="button"].btn-block {
   color: #495057;
   text-align: center;
   white-space: nowrap;
-  background-color: #e9ecef;
+  background-color: var(--gray-light);
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
 }
@@ -3797,7 +3798,7 @@ input[type="button"].btn-block {
 }
 
 .custom-control-input:disabled ~ .custom-control-label::before {
-  background-color: #e9ecef;
+  background-color: var(--gray-light);
 }
 
 .custom-control-label {
@@ -3922,7 +3923,7 @@ input[type="button"].btn-block {
 
 .custom-select:disabled {
   color: var(--gray);
-  background-color: #e9ecef;
+  background-color: var(--gray-light);
 }
 
 .custom-select::-ms-expand {
@@ -3970,7 +3971,7 @@ input[type="button"].btn-block {
 }
 
 .custom-file-input:disabled ~ .custom-file-label {
-  background-color: #e9ecef;
+  background-color: var(--gray-light);
 }
 
 .custom-file-input:lang(en) ~ .custom-file-label::after {
@@ -4004,7 +4005,7 @@ input[type="button"].btn-block {
   line-height: 1.5;
   color: #495057;
   content: "Browse";
-  background-color: #e9ecef;
+  background-color: var(--gray-light);
   border-left: 1px solid #ced4da;
   border-radius: 0 0.25rem 0.25rem 0;
 }
@@ -4202,7 +4203,7 @@ div[role="navigation"] {
 
 .nav-tabs .nav-link:hover,
 .nav-tabs .nav-link:focus {
-  border-color: #e9ecef #e9ecef var(--primary-shadow);
+  border-color: var(--gray-light) var(--gray-light) var(--primary-shadow);
 }
 
 .nav-tabs .nav-link.disabled {
@@ -4986,7 +4987,7 @@ div[role="navigation"] {
   padding: 0.75rem 1rem;
   margin-bottom: 1rem;
   list-style: none;
-  background-color: #e9ecef;
+  background-color: var(--gray-light);
   border-radius: 0.25rem;
 }
 
@@ -5035,7 +5036,7 @@ div[role="navigation"] {
   z-index: 2;
   color: #0056b3;
   text-decoration: none;
-  background-color: #e9ecef;
+  background-color: var(--gray-light);
   border-color: var(--primary-shadow);
 }
 
@@ -5233,7 +5234,7 @@ div[role="navigation"] {
 .jumbotron {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
-  background-color: #e9ecef;
+  background-color: var(--gray-light);
   border-radius: 0.3rem;
 }
 
@@ -5474,7 +5475,7 @@ div[role="navigation"] {
 
 .list-group-item-action:active {
   color: var(--text-base-color);
-  background-color: #e9ecef;
+  background-color: var(--gray-light);
 }
 
 .list-group-item {
@@ -5785,7 +5786,7 @@ button.close {
   align-items: flex-start;
   justify-content: space-between;
   padding: 1rem;
-  border-bottom: 1px solid #e9ecef;
+  border-bottom: 1px solid var(--gray-light);
   border-top-left-radius: 0.3rem;
   border-top-right-radius: 0.3rem;
 }
@@ -5811,7 +5812,7 @@ button.close {
   align-items: center;
   justify-content: flex-end;
   padding: 1rem;
-  border-top: 1px solid #e9ecef;
+  border-top: 1px solid var(--gray-light);
 }
 
 .modal-footer > :not(:first-child) {
